# supabase-pydantic

./: .example.env  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  constants.py  example.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test_array_types.py  test_enum_arrays.py  test_results.txt  util.py  whitelist.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  python-multi-version.yml  python-publish.yml
api/api-reference/: index.html
api/cli/: index.html
db-scripts/postgres-todos/: init_database.sql  teardown.sql
db-scripts/sb-countries/: init_database.sql  teardown.sql
db-scripts/sb-slack/: init_database.sql  teardown.sql
docker/: Dockerfile  Dockerfile.test-runner  docker-compose.yml  run_tests.sh
docs/: references.md  to-do.md
docs/api/: api-reference.md  cli.md
docs/examples/: add-seed-sql-data.md  enum-model-generation.md  generate-multiple-basemodels.md  insert-update-models.md  model-prefix-example.md  model_prefix_example.md  mysql-support.md  setup-slack-simple-fastapi.md  singular-class-names.md  sqlalchemy-models.md
docs/getting-started/: changelog.md  contributing.md  getting-help.md  installation.md  references.md  to-do.md  welcome.md
docs/other/: references.md  to-do.md
examples/: index.html
examples/add-seed-sql-data/: index.html
examples/enum-model-generation/: index.html
examples/generate-multiple-basemodels/: index.html
examples/insert-update-models/: index.html
examples/model-prefix-example/: index.html
examples/model_prefix_example/: index.html
examples/mysql-support/: index.html
examples/setup-jsonapi/: index.html
examples/setup-slack-simple-fastapi/: index.html
examples/singular-class-names/: index.html
examples/sqlalchemy-models/: index.html
getting-started/changelog/: index.html
getting-started/contributing/: index.html
getting-started/getting-help/: index.html
getting-started/installation/: index.html
getting-started/security/: index.html
getting-started/welcome/: index.html
other/references/: index.html
other/to-do/: index.html
poc/: visualize_relationships.py
search/: search_index.json
src/supabase_pydantic/: __init__.py  __main__.py
src/supabase_pydantic/cli/: __init__.py  common.py  main.py
src/supabase_pydantic/cli/commands/: __init__.py  clean.py  gen.py  generate.py
src/supabase_pydantic/core/: __init__.py  config.py  constants.py  file_utils.py  formatters.py  generators.py  marshalers.py  models.py  sorting.py  type_utils.py  utils.py
src/supabase_pydantic/core/writers/: __init__.py  abstract.py  factories.py  pydantic.py  pydantic_writers.py  sqlalchemy.py  sqlalchemy_writers.py  util.py  utils.py
src/supabase_pydantic/db/: __init__.py  base.py  builder.py  connection.py  connection_manager.py  constants.py  database_type.py  exceptions.py  factory.py  graph.py  marshaler.py  models.py  postgres.py  queries.py  registrations.py  type_factory.py
src/supabase_pydantic/db/abstract/: __init__.py  base_connector.py  base_schema_reader.py
src/supabase_pydantic/db/connectors/: __init__.py
src/supabase_pydantic/db/factories/: __init__.py  connection_factory.py
src/supabase_pydantic/db/marshalers/: __init__.py  column.py  constraints.py  relationships.py  schema.py
src/supabase_pydantic/db/seed/: __init__.py  fake.py  generator.py
src/supabase_pydantic/db/utils/: __init__.py  url_parser.py
src/supabase_pydantic/utils/: __init__.py  config.py  constants.py  dataclasses.py  db.py  fake.py  formatting.py  io.py  logging.py  marshalers.py  serialization.py  strings.py  types.py  util.py
src/supabase_pydantic/writers/: __init__.py  abstract_classes.py  factories.py  pydantic_writers.py  sqlalchemy_writers.py  util.py
supabase_pydantic/: cli.py  main.py
supabase_pydantic/util/: __init__.py  constants.py  dataclasses.py  dataclasses.py.bak  db.py  exceptions.py  fake.py  fake.py.bak  generator_helpers.py  json.py  marshalers.py  marshalers.py.bak  sorting.py  sorting.py.bak  string.py  util.py  writer.py
supabase_pydantic/util/writers/: __init__.py  abstract_classes.py  factories.py  factories.py.bak  pydantic_writers.py  pydantic_writers.py.bak  sqlalchemy_writers.py  util.py
tests/integration/: conftest.py  test_singular_names.py  test_singular_names_cli.py
tests/integration/db/: test_db_connection.py  test_schema_introspection.py  test_seed_generation.py
tests/unit/: test_cli.py  test_constants.py  test_dataclasses.py  test_db.py  test_fake.py  test_json.py  test_main.py  test_marshalers.py  test_sorting.py  test_string.py  test_util.py
tests/unit/cli/commands/: test_cli.py  test_gen.py
tests/unit/cli/common/: test_common.py
tests/unit/core/config/: test_config.py  test_writer_config.py
tests/unit/core/writers/: test_abstract_classes.py  test_factories.py  test_pydantic_constraints.py  test_pydantic_model_prefix_protection.py  test_pydantic_writers.py  test_sqlalchemy_enum_handling.py  test_sqlalchemy_writers.py  test_writer_util.py
tests/unit/db/: test_builder.py
tests/unit/db/abstract/: test_base_connector.py  test_base_schema_reader.py
tests/unit/db/connection/: test_connection.py
tests/unit/db/constants/: test_db_constants.py
tests/unit/db/construction/: test_construction.py
tests/unit/db/factories/: test_connection_factory.py
tests/unit/db/graph/: test_dependencies.py  test_graph.py  test_graph_relationships.py
tests/unit/db/marshalers/: test_column.py  test_constraints.py  test_marshalers_relationships.py  test_marshalers_schema.py  test_relationships.py  test_schema_additional.py  test_table.py
tests/unit/db/models/: test_models.py
tests/unit/db/schema/: test_db_schema.py
tests/unit/writers/: test_abstract_classes.py  test_factories.py  test_pydantic_constraints.py  test_pydantic_model_prefix_protection.py  test_pydantic_writers.py  test_sqlalchemy_writers.py  test_writer_util.py
(+53 files in other folders)
