[tool.poetry]
name = "supabase-pydantic"
version = "0.3.0"
description = "A project to translate Supabase schemas into Pydantic models"
authors = ["K Boehm <kmbhm1@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2", 
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X", 
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.scripts]
sb-pydantic = 'supabase_pydantic.cli:main'
supabase-pydantic = 'supabase_pydantic.cli:main'

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
pydantic = "^2.6.3"
types-psycopg2 = "^2.9.21.20240417"
faker = "^24.11.0"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
sqlalchemy = {extras = ["mypy"], version = "^2.0.31"}
fastapi-jsonapi = "^2.8.0"
pytest = "^8.2.2"
python-semantic-release = "^9.8.5"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP", # pyupgrade
    "D",  # pydocstyle
    "I",  # isort
    "Q",  # flake8-quotes
    "W",  # pycodestyle
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "docs",
    # "notebooks",
    "**/*tests*",
    "scripts",
    "setup.py",
    "setup.cfg",
    "pyproject.toml",
    "poetry.lock",
    "pyrightconfig.json",
    ".*.yml",
    ".*.yaml",
    ".*.toml",
    ".*.md",
    ".*.txt",
    ".*.rst",
    ".*.json",
    ".*.html",
    ".*.css",
    ".*.js",
    ".*.png",
    ".*.jpg",
    ".*.jpeg",
    ".*.gif",
    ".*.svg",
    ".*.ico",
    ".*.eot",
    ".*.ttf",
    ".*.woff",
    ".*.woff2",
    ".*.map",
    # ".*.ipynb",
    ".*.pyi",
    ".*.pyc",
    ".*.pyd",
    ".*.pyo",
    ".*.pyw",
    ".*.pyz",
    ".*.pyzw",
    ".*.DS_Store",
    ".*.gitignore",
    ".*.gitkeep",
    ".*.gitmodules",
    ".*.gitattributes",
    ".*.git",
    ".*.hgignore",
    ".*.hgkeep",
    ".*.",
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D202", # No blank lines allowed after function docstring
    "D206", # Docstring should be indented with spaces, not tabs
    "E101", # indentation contains mixed spaces and tabs
    "F403", # 'from module import *' used; unable to detect undefined names
    "Q000", # Remove bad quotes
    "Q002", # Remove bad quotes
    "Q003", # Unnecessary single quotes
    "W191", # Indentation contains tabs
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
allow_zero_version = true
assets = []
branch = "main"
build_command = "poetry build"
build_command_env = []
changelog_file = "CHANGELOG.md"
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
dist_path = "dist/"
logging_use_named_masks = false
major_on_zero = true
no_git_verify = false
patch_without_tag = true
remove_dist = false
tag_format = "v{version}"
upload_to_pypi = false
upload_to_release = true
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "KB <kmbhm1@gmail.com>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "feature", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat", "feature"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

